fixed css alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   background-color: #222222;
+  text-align: center;
 }
 
 h1 {
